FRAME-6586 Changes for java 17